--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "ahart14",
   "dependencies": {
     "@11ty/eleventy": "^0.12.1",
+    "@11tyrocks/eleventy-plugin-social-images": "^0.4.0",
     "autoprefixer": "^10.4.0",
     "cross-env": "^7.0.3",
     "cssnano": "^5.0.10",
